--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,1 +1,27 @@
-<p>home works!</p>
+<main>
+    <section id="banner" class="banner">
+        <div class="box">
+            <h1>
+                <span class="title1">Seja bem-vindo!</span>
+                <span class="title2">Meu nome é Pedro Rodrigues, sou programador Full Stack | Frontend & Backend.</span>
+            </h1>
+
+            <p class="paragraph">Venha conhecer mais sobre mim, meus projetos e habilidades.</p>
+
+            <div class="buttons">
+                <a href="#about">
+                    <i class="material-symbols-outlined">
+                        sentiment_excited
+                    </i>
+                    sobre mim
+                </a>
+                <a href="#skills">
+                    <i class="material-symbols-outlined">
+                        sync_saved_locally
+                    </i>
+                    habilidades
+                </a>
+            </div>
+        </div>
+    </section>
+</main>
