--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -65,3 +65,62 @@
 .banner .box .buttons a i {
     margin-right: 5px;
 }
+
+/*box about*/
+
+.about .box {
+    display: flex;
+    flex-direction: column;
+}
+
+.about .box .img {
+    flex: 1;
+    margin: 0 auto 20px;
+    margin-top: 20px;
+}
+
+.about .box .img img {
+    width: 240px;
+    aspect-ratio: 1 / 1;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.about .box .text {
+    flex: 2;
+    padding: 0 20px;
+}
+
+.about .box .text h3 {
+    color: var(--color-blue-2);
+    margin-top: 15px;
+}
+
+.about .box .text p {
+    margin: 15px 0;
+    text-align: justify;
+}
+
+.about .box .text a {
+    font-weight: 400;
+    text-decoration: none;
+    color: var(--color-pink-1);
+}
+
+@media (min-width: 768px) {
+    .about .box {
+        flex-direction: row;;
+    }
+
+    .about .box .img img {
+        width: 100%;
+        margin-top: 40px;
+        margin-left: 20px;
+    }
+
+    .about .box .text {
+        padding-left: 50px;
+        margin-top: 50px;
+        margin-right: 20px;
+    }
+}
