--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -24,4 +24,28 @@
             </div>
         </div>
     </section>
+
+    <section id="about" class="container about">
+        <div class="box">
+            <div class="img">
+                <img src="./assets/imgs/profile.jpg" alt="foto de Pedro Rodrigues">
+            </div>
+            
+            <div class="text">
+                <h2>Sobre mim</h2>
+
+                <h3>Sou programador Full Stack especializado no desenvolvimento de aplicações para a web.</h3>
+
+                <p>Sou apaixonado por tecnologia e programação, com experiência na criação de soluções completas, do front-end ao back-end. Tenho grande preocupação com usabilidade e design, buscando desenvolver interfaces intuitivas e funcionais, aliadas a sistemas robustos e eficientes. Prezo pela escrita de um código limpo, organizado e de fácil compreensão, facilitando a manutenção, a escalabilidade e a colaboração em equipe.</p>
+
+                <p>Sou um programador que possui conhecimento em <b>HTML</b>, <b>CSS</b> e <b>JavaScript</b> para o desenvolvimento de interfaces modernas e responsivas no front-end, além de experiência com <b>Angular</b> e <b>TypeScript</b> na construção de aplicações dinâmicas e escaláveis. No back-end, atuo com <b>ASP.NET Core</b> e <b>C#</b>, desenvolvendo <b>APIs</b> e sistemas robustos, integrados a <b>bancos de dados (MySQL)</b>.</p>
+
+                <p>Em 2024, iniciei minha formação superior no curso de Engenharia de Software pela Faculdade Cruzeiro do Sul. Paralelamente à graduação, busco constantemente aprimorar meus conhecimentos por meio de cursos complementares, com o objetivo de me manter atualizado e evoluir tecnicamente. Ao longo desse período, já desenvolvi um sistema funcional de login e cadastro de clientes, além de outras aplicações web, aplicando na prática conceitos de desenvolvimento Full Stack.</p>
+
+                <p>Estou sempre em busca de novos desafios e oportunidades para aplicar minhas habilidades e contribuir para o sucesso de novos projetos! 😉</p>
+
+                <a href="#contact">Entre em contato comigo!</a>
+            </div>
+        </div>
+    </section>
 </main>
