--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -105,7 +105,7 @@
     font-weight: 400;
     text-decoration: none;
     color: var(--color-pink-1);
-    display: inline-block; 
+    display: inline-block;
     margin-bottom: 40px;
 }
 
@@ -117,7 +117,7 @@
 }
 
 .skills .box {
-    max-width: 900px;
+    max-width: 1280px;
     margin: 0 auto;
 }
 
@@ -128,19 +128,17 @@
     color: #fff;
 }
 
-.skills .box h2 {
-    margin: 0;
-}
-
 .skills .box h3 {
     font-size: var(--font-size-4);
-    margin: 0 0 20px;
+    margin: 5px 0 20px;
 }
 
 /* Items */
 .skills .box .items {
     display: flex;
     flex-wrap: wrap;
+    margin: 0 auto;
+    max-width: 900px;
 }
 
 .skills .box .items .skill {
@@ -165,6 +163,96 @@
     margin-top: 15px;
 }
 
+.about,
+.skills {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+}
+
+.about .box,
+.skills .box {
+    width: 100%;
+}
+
+/* box projects */
+
+.container {
+    padding: 40px 20px;
+}
+
+.container .box {
+    max-width: 1280px;
+    margin: 0 auto;
+}
+
+.projects .box h3 {
+    margin: 5px 0 20px;
+    font-size: var(--font-size-4);
+}
+
+.projects .box .project {
+    display: flex;
+    flex-direction: column;
+    margin: 50px 0;
+    align-items: center;
+}
+
+.projects .box .project.reverse {
+    flex-direction: column-reverse;
+    align-items: center;
+}
+
+.projects .box .project .img {
+    flex: 1;
+}
+
+.projects .box .project .text {
+    flex: 1;
+    margin-bottom: 15px;
+    text-align: left;
+}
+
+.projects .box .project .img img {
+    width: 100%;
+}
+
+.projects .box .project .text h4 {
+    font-size: var(--font-size-3);
+    margin-bottom: 15px;
+}
+
+.projects .box .project .text .buttons {
+    margin-top: 20px;
+    display: flex;
+}
+
+.projects .box .project .text .buttons a {
+    display: inline-flex;
+    border-radius: 45px;
+    color: #fff;
+    height: 30px;
+    background: #181616;
+    margin-right: 15px;
+    padding: 0 12px;
+    font-size: var(--font-size-5);
+    font-weight: 400;
+    align-items: center;
+    text-decoration: none;
+}
+
+.projects .box .project .text .buttons a.live {
+    background: var(--color-pink-1);
+}
+
+.projects .box .project .text .buttons a svg,
+.projects .box .project .text .buttons a i {
+    width: 20px;
+    margin-right: 8px;
+    font-size: 20px;
+}
+
+
 @media (min-width: 768px) {
 
     .about .box {
@@ -188,5 +276,14 @@
     .skills .box .items .skill img,
     .skills .box .items .skill svg {
         width: 140px;
+    }
+
+    .projects .box .project,
+    .projects .box .project.reverse {
+        flex-direction: row;
+    }
+
+    .container {
+        padding: 70px 40px;
     }
 }
