--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -122,6 +122,7 @@
 }
 
 /* Títulos */
+
 .skills .box h2,
 .skills .box h3,
 .skills .box h4 {
@@ -134,6 +135,7 @@
 }
 
 /* Items */
+
 .skills .box .items {
     display: flex;
     flex-wrap: wrap;
@@ -252,6 +254,60 @@
     font-size: 20px;
 }
 
+/* box contact */
+
+.contact {
+    background: var(--color-black-1);
+}
+
+.contact .box {
+    max-width: 880px;
+}
+
+.contact .box h2,
+.contact .box h3 {
+    color: #fff;
+}
+
+.contact .box h3 {
+    font-size: var(--font-size-3);
+}
+
+.contact .box .contacts {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin: 25px 0;
+}
+
+.contact .box .contacts a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    background: var(--color-pink-1);
+    height: 50px;
+    color: #fff;
+    border-radius: 35px;
+    min-width: 200px;
+    font-weight: 700;
+    margin: 15px 0;
+    text-decoration: none;
+}
+
+.contact .box .contacts a:hover {
+    background: #f42771bf;
+}
+
+.contact .box .contacts a span {
+    font-size: 35px;
+    margin-right: 5px;
+}
+
+.contact .box .contacts a svg {
+    width: 30px;
+    margin-right: 5px;
+}
 
 @media (min-width: 768px) {
 
@@ -285,5 +341,9 @@
 
     .container {
         padding: 70px 40px;
+    }
+
+    .contact .box .contacts {
+        flex-direction: row;
     }
 }
